# rust

./: Cargo.toml
src/: auth.rs  auth_error.rs  clientes.rs  main.rs  middleware.rs  models.rs
static/: style.css
templates/: adicionar.html  base.html  base_login.html  criar_usuario.html  editar.html  index.html  login.html
