[package]
name = "perua_escolar_web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-session = { version = "0.8", features = ["cookie-session"] }
actix-identity = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = { version = "24.0", features = ["derive"] }
tera = { version = "1.18", features = ["builtins"] }
dotenv = "0.15"
lazy_static = "1.4.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
futures-util = "0.3" # <--- ADICIONE ESTA LINHA
rust_decimal = { version = "1.30", features = ["serde"] }
rust_decimal_macros = "1.30"